--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,7 +12,7 @@ tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
 # Tauri core
-tauri = { version = "2.0", features = ["protocol-asset"] }
+tauri = { version = "2.0", features = ["protocol-asset", "tray-icon"] }
 tauri-plugin-global-shortcut = "2.0"
 tauri-plugin-autostart = "2.0"
 tauri-plugin-dialog = "2.0"
