--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
 # Tauri core
-tauri = { version = "2.0", features = ["protocol-asset", "tray-icon"] }
+tauri = { version = "2.0", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
 tauri-plugin-global-shortcut = "2.0"
 tauri-plugin-autostart = "2.0"
 tauri-plugin-dialog = "2.0"
@@ -44,6 +44,7 @@ anyhow = "1.0"
 thiserror = "1.0"
 log = "0.4"
 env_logger = "0.11"
+tauri-plugin-os = "2.3.2"
 
 # Platform-specific dependencies
 [target.'cfg(target_os = "windows")'.dependencies]
