--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -54,6 +54,7 @@ thiserror = "1.0"
 log = "0.4"
 env_logger = "0.11"
 tauri-plugin-os = "2.3.2"
+uuid = { version = "1.0", features = ["v4"] }
 
 # Platform-specific dependencies
 [target.'cfg(target_os = "windows")'.dependencies]
